--- a/Classes/View/WordPress/Element/WPPostContentHeaderElementCell.xib
+++ b/Classes/View/WordPress/Element/WPPostContentHeaderElementCell.xib
@@ -31,19 +31,19 @@
 				<string key="IBProxiedObjectIdentifier">IBFirstResponder</string>
 				<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 			</object>
-			<object class="IBUITableViewCell" id="1063836094">
+			<object class="IBUITableViewCell" id="684869864">
 				<reference key="NSNextResponder"/>
 				<int key="NSvFlags">290</int>
 				<array class="NSMutableArray" key="NSSubviews">
-					<object class="IBUIView" id="555799542">
-						<reference key="NSNextResponder" ref="1063836094"/>
+					<object class="IBUIView" id="560748514">
+						<reference key="NSNextResponder" ref="684869864"/>
 						<int key="NSvFlags">256</int>
 						<array class="NSMutableArray" key="NSSubviews">
-							<object class="IBUILabel" id="360647465">
-								<reference key="NSNextResponder" ref="555799542"/>
+							<object class="IBUILabel" id="982523479">
+								<reference key="NSNextResponder" ref="560748514"/>
 								<int key="NSvFlags">258</int>
-								<string key="NSFrame">{{20, 0}, {280, 59}}</string>
-								<reference key="NSSuperview" ref="555799542"/>
+								<string key="NSFrame">{{5, 0}, {310, 32}}</string>
+								<reference key="NSSuperview" ref="560748514"/>
 								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
@@ -75,13 +75,13 @@
 									<int key="NSfFlags">16</int>
 								</object>
 								<bool key="IBUIAdjustsFontSizeToFit">NO</bool>
-								<double key="preferredMaxLayoutWidth">280</double>
+								<double key="preferredMaxLayoutWidth">310</double>
 							</object>
 						</array>
-						<string key="NSFrameSize">{300, 59}</string>
-						<reference key="NSSuperview" ref="1063836094"/>
+						<string key="NSFrameSize">{320, 31}</string>
+						<reference key="NSSuperview" ref="684869864"/>
 						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView" ref="360647465"/>
+						<reference key="NSNextKeyView" ref="982523479"/>
 						<string key="NSReuseIdentifierKey">_NS:11</string>
 						<object class="NSColor" key="IBUIBackgroundColor">
 							<int key="NSColorSpace">3</int>
@@ -94,18 +94,18 @@
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 					</object>
 				</array>
-				<string key="NSFrameSize">{320, 60}</string>
+				<string key="NSFrameSize">{320, 32}</string>
 				<reference key="NSSuperview"/>
 				<reference key="NSWindow"/>
-				<reference key="NSNextKeyView" ref="555799542"/>
+				<reference key="NSNextKeyView" ref="560748514"/>
 				<string key="NSReuseIdentifierKey">_NS:9</string>
 				<object class="NSColor" key="IBUIBackgroundColor">
 					<int key="NSColorSpace">1</int>
 					<bytes key="NSRGB">MSAxIDEAA</bytes>
 				</object>
 				<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
-				<int key="IBUIAccessoryType">1</int>
-				<reference key="IBUIContentView" ref="555799542"/>
+				<int key="IBUISelectionStyle">0</int>
+				<reference key="IBUIContentView" ref="560748514"/>
 				<string key="IBUIReuseIdentifier">headerCell</string>
 				<real value="64" key="IBUIRowHeight"/>
 			</object>
@@ -115,8 +115,8 @@
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchOutletConnection" key="connection">
 						<string key="label">headerLabel</string>
-						<reference key="source" ref="1063836094"/>
-						<reference key="destination" ref="360647465"/>
+						<reference key="source" ref="684869864"/>
+						<reference key="destination" ref="982523479"/>
 					</object>
 					<int key="connectionID">22</int>
 				</object>
@@ -142,16 +142,16 @@
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">20</int>
-						<reference key="object" ref="1063836094"/>
+						<reference key="object" ref="684869864"/>
 						<array class="NSMutableArray" key="children">
-							<reference ref="360647465"/>
+							<reference ref="982523479"/>
 						</array>
 						<reference key="parent" ref="0"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">21</int>
-						<reference key="object" ref="360647465"/>
-						<reference key="parent" ref="1063836094"/>
+						<reference key="object" ref="982523479"/>
+						<reference key="parent" ref="684869864"/>
 					</object>
 				</array>
 			</object>
@@ -173,7 +173,7 @@
 			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
 				<object class="IBPartialClassDescription">
 					<string key="className">WPAbstractPostContentStructuredElementCell</string>
-					<string key="superclassName">XBTableViewCell</string>
+					<string key="superclassName">UITableViewCell</string>
 					<object class="IBClassDescriptionSource" key="sourceIdentifier">
 						<string key="majorKey">IBProjectSource</string>
 						<string key="minorKey">./Classes/WPAbstractPostContentStructuredElementCell.h</string>
@@ -196,14 +196,6 @@
 					<object class="IBClassDescriptionSource" key="sourceIdentifier">
 						<string key="majorKey">IBProjectSource</string>
 						<string key="minorKey">./Classes/WPPostContentHeaderElementCell.h</string>
-					</object>
-				</object>
-				<object class="IBPartialClassDescription">
-					<string key="className">XBTableViewCell</string>
-					<string key="superclassName">UITableViewCell</string>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/XBTableViewCell.h</string>
 					</object>
 				</object>
 			</array>
